[metadata]
name = gemlog_from_rss
version = attr: gemlog_from_rss.__version__
long_description_content_type = text/markdown
long_description = file: README.md
license_file = LICENSE
keywords = gemini gemlog rss converter gemini-protocol xml
url = https://github.com/Hookz/Gemlog-from-RSS
author_email= michal@jarski.eu
author = Michal Jarski
description = A package that allows for converting RSS feeds into Gemlogs (Gemini blogs).

[options]
packages =
    gemlog_from_rss
    gemlog_from_rss.spip
    gemlog_from_rss.wordpress
install_requires =
    requests ~= 2.25.1
    lxml ~= 4.6.2
    beautifulsoup4 ~= 4.9.3; python_version == "3.8"
include_package_data = True
python_requires = >= 3.8